@@ -1,0 +1,99 @@
+#  -*- Autoconf -*-
+
+AT_SETUP([merging a rename twice])
+
+MONOTONE_SETUP
+
+# x_branch   y_branch
+#  
+#   A
+#   |\   this edge says rename(x, y)
+#   | ----------
+#   |           \
+#   B            E--------\
+#   |            |         |
+#   |            F         |
+#   C            |         |
+#   |\propagate1 |         |
+#   | -----------G         |
+#   |            |         J
+#   |            H         |
+#   D            |         |
+#    \propagate2 |         |
+#     -----------I---------K
+
+AT_DATA(x, [data of state A
+])
+AT_DATA(foo, [extra blah blah foo
+])
+AT_DATA(bar, [extra blah blah bar
+])
+AT_DATA(baz, [extra blah blah baz
+])
+AT_DATA(quux, [extra blah blah quux
+])
+
+# produce state A
+AT_CHECK(MONOTONE add x, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --branch=branch.x commit 'state A', [], [ignore], [ignore])
+A_MANIFEST_SHA=`SHA1(MT/manifest)`
+
+# produce state B
+echo "data of state B" >x
+AT_CHECK(MONOTONE --branch=branch.x commit 'state B', [], [ignore], [ignore])
+
+# produce state C
+echo "data of state C" >x
+AT_CHECK(MONOTONE --branch=branch.x commit 'state C', [], [ignore], [ignore])
+C_MANIFEST_SHA=`SHA1(MT/manifest)`
+
+# produce state E
+REVERT_TO($A_MANIFEST_SHA)
+mv x y
+AT_CHECK(MONOTONE rename x y, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --branch=branch.y commit 'state E', [], [ignore], [ignore])
+E_MANIFEST_SHA=`SHA1(MT/manifest)`
+
+# produce state F
+AT_CHECK(MONOTONE add foo, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --branch=branch.y commit 'state F', [], [ignore], [ignore])
+
+# produce state G
+AT_CHECK(MONOTONE propagate branch.x branch.y, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --branch=branch.y update, [], [ignore], [ignore])
+G_MANIFEST_SHA=`SHA1(MT/manifest)`
+AT_CHECK(grep 'state C' y, [], [ignore], [ignore])
+
+# produce state D
+REVERT_TO($C_MANIFEST_SHA)
+echo "data of state D" >x
+AT_CHECK(MONOTONE add bar, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --branch=branch.x commit 'state D', [], [ignore], [ignore])
+
+# produce state H
+REVERT_TO($G_MANIFEST_SHA)
+AT_CHECK(MONOTONE add baz, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --branch=branch.y commit 'state H', [], [ignore], [ignore])
+
+# produce state I
+AT_CHECK(MONOTONE propagate branch.x branch.y, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --branch=branch.y update, [], [ignore], [ignore])
+AT_CHECK(grep 'state D' y, [], [ignore], [ignore])
+
+# produce state J
+REVERT_TO($E_MANIFEST_SHA)
+AT_CHECK(MONOTONE add quux, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --branch=branch.y commit 'state J', [], [ignore], [ignore])
+
+# produce state K
+AT_CHECK(MONOTONE --branch=branch.y merge, [], [ignore], [ignore])
+AT_CHECK(MONOTONE --branch=branch.y update, [], [ignore], [ignore])
+
+AT_CHECK(grep y MT/manifest, [], [ignore], [ignore])
+AT_CHECK(grep -v x MT/manifest, [], [ignore], [ignore])
+AT_CHECK(test -f y)
+AT_CHECK(grep 'state D' y, [], [ignore], [ignore])
+
+AT_CLEANUP
+
+
