@@ -111,6 +111,13 @@ AT_CHECK(test $PROBE_M_SHA == $2)
 AT_CHECK(test $PROBE_F_SHA == $3)
 ])
 
+# run as REVERT_TO(msha)
+m4_define([REVERT_TO], [ 
+AT_CHECK(rm MT/manifest)
+AT_CHECK(MONOTONE checkout $1 ., [], [ignore])
+PROBE_M_SHA=`SHA1(MT/manifest)`
+AT_CHECK(test $PROBE_M_SHA == $1)
+])
 
 # include all the sub-tests we're going to use
 
@@ -145,3 +152,4 @@ m4_include(tests/t_attributes.at)
 m4_include(tests/t_single_char_filenames.at)
 m4_include(tests/t_movepatch.at)
 m4_include(tests/t_movedel.at)
+m4_include(tests/t_remerge.at)
